--- a/academica.html
+++ b/academica.html
@@ -165,6 +165,11 @@
                   </p>
                 </div>
             </div>
+            <div class="text-center font-italic">
+              <hr class="featurette-divider">
+              <h2 class="text-center">Información Academica</h2>
+              <p class="fw-light"> A continuación se presentan los tiempos de cada una de las etapas academicas así como las instituciones en las cuales se realizaron.</p>
+            </div>
             <hr class="featurette-divider">
         </div>
           <!-- Cuadro 1 imagen izquierda -->
