--- a/expectativas.html
+++ b/expectativas.html
@@ -106,8 +106,8 @@
               <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                   <h2 class="featurette-heading">
-                    "Expectativas"
-                    <span class="text-muted"> vamo a ver</span>
+                    Expectativas
+                    <span class="text-muted"> academicas</span>
                   </h2>
                   <p class="lead" style="text-align: justify">
                     Considerando los conocimientos que he adquirido durante mi desarrollo academico y las necesidades actuales del pais, considero que es necesario adquirir tantos conocimientos como sea posible para así lograr impactar sobre las comunidades, por lo cual, una vez terminada la carrera profesional que me encuentro cursando en este momento, tengo planeado estudiar la Especialización en Geomatica ya que complementa los conocimientos. 
@@ -131,11 +131,11 @@
               <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                   <h2 class="featurette-heading">
-                    "Expectativas"
-                    <span class="text-muted"> vamo a ver</span>
+                    Expectativas
+                    <span class="text-muted"> laborales</span>
                   </h2>
                   <p class="lead" style="text-align: justify">
-                    Acá van las expectativas academicas
+                    Acá van las expectativas laborales
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
@@ -160,7 +160,7 @@
                     <span class="text-muted"> de investigación </span>
                   </h2>
                   <p class="lead" style="text-align: justify">
-                    Esta linea de investigación de la ingeniería topográfica es la que más me interesa debido a que considero que tiene una alta proyección laboral a futuro ya que el uso de sensores remotos para monitoreo de variables ambientales y otro tipo de variables serán de gran aplicabilidad eventualmente. 
+                    Durante el tiempo que he estado relacionado con la topografía me han interesado diferentes enfoques de la disciplina considerando que tiene multiples campos de accion, inicialmente, el trabajo de campo era mi enfoque inicial, actualmente y luego de conocer y entender nuevas herramientas y aplicabilidades de la carrera,me gustaria enfocarme por el area de la percepcion remota, ya que considero que tiene una alta proyección laboral a futuro ya que el uso de sensores remotos para monitoreo de variables ambientales y otro tipo de variables serán de gran aplicabilidad eventualmente. 
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1 text-center">
@@ -184,11 +184,10 @@
               <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                   <h2 class="featurette-heading">
-                    "Expectativas"
-                    <span class="text-muted"> vamo a ver</span>
+                    Motivación
                   </h2>
                   <p class="lead" style="text-align: justify">
-                    Acá van las expectativas academicas
+                    Desde el inicio de mis estudios tanto profesionales como tecnologicos e incluso en el bachillerato mismo, mi motivacion siempre ha sido ayudar a mi familia y de cierta manera compensar aunque sea un poco todo lo que me han dado y que se sientan orgullosos sabiendo que todos los esfuerzos y sacrificios que han hecho para ayudarme han dado mis frutos.
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
