--- a/personal.html
+++ b/personal.html
@@ -206,7 +206,7 @@
                   <h4> Tecnologo</h4>
                   <p>  </p>
                   <div class="container">
-                    <p style="text-align: justify">  En el año 2015 ingresé a estudiar el tecnologo en Topografía en el SENA Centro Minero que se encuentra ubicado en la vereda Morcá del municipio de Sogamoso</p>
+                    <p style="text-align: justify">  En el año 2015 ingresé a estudiar el tecnologo en Topografía en el SENA Centro Minero que se encuentra ubicado en la vereda Morcá del municipio de Sogamoso, Allí aprendí conceptos basicos de topografía.</p>
                     <a href="https://www.google.com/maps/@5.7304402,-72.8948728,3a,75y,247.95h,65.54t/data=!3m8!1e1!3m6!1sAF1QipOua3EO4fIZxp37u5-wTxMDGXJva-PHPwXqV_5C!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOua3EO4fIZxp37u5-wTxMDGXJva-PHPwXqV_5C%3Dw203-h100-k-no-pi-0-ya157.47491-ro-0-fo100!7i4096!8i2048" target="u_blank">
                       <img class="mx-auto d-block rounded" src="img/sena.JPG" style="width:70%">
                     </a>
@@ -333,6 +333,7 @@
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="6"></button>
             </div>
       
       <!-- Slideshow/carousel -->
@@ -340,35 +341,36 @@
               <div class="carousel-item active">
                 <img src="img/carpersonal1.jpg" alt="Imagen1" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3 >Ciclismo</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/carpersonal3.JPG" alt="Imagen2" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3>Gato</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/ciclismo.JPG" alt="Imagen3" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3>Ciclismo</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/perfil3.jpg" alt="Imagen4" class="mx-auto d-block rounded" style="width:45%">
+                <img src="img/personal.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3>Cuarta Imagen</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/perfil3.jpg" alt="Imagen5" class="mx-auto d-block rounded" style="width:45%">
+                <img src="img/personal2.JPG" alt="Imagen5" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3>Quinta Imagen</h3>
+                  <br>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/personal3.jpg" alt="Imagen6" class="mx-auto d-block rounded" style="width:45%">
+                <div class="carousel-caption text-muted">
                   <br>
                 </div>
               </div>
