--- a/principal.html
+++ b/principal.html
@@ -82,14 +82,17 @@
         <hr class="featurette-divider">
           <!-- Una pequeña presentacion -->
         <div class="container">
-          <div class="row featurette">
+          <div class="row featurette" style="background-image: url('img/princfondo.JPG'); background-size: cover; ">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
+                <br>
+
                 Página 
-                <span class="text-muted"> Principal</span>
+                <span class="text-dark"> Principal</span>
               </h2>
-              <p class="lead" style="text-align: justify">
-                Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años de edad, actualmente soy estudiante de ingenieria topografica,En el presente sitio web presento y explico algunos aspectos referentes a mi vida como lo son, mi familia, mis estudios, hobbies y expectativas a futuro. A continuacion encontrará diferentes enlaces a la informacion deseada. 
+              <p class="lead text-dark bold" style="text-align: justify;"><em>
+                Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años, actualmente soy estudiante de ingeniería topográfica. En el presente sitio web presento y explico algunos aspectos referentes a mi vida como lo son, mi familia, mis estudios, hobbies y expectativas a futuro. A continuación, encontrará diferentes enlaces a la información deseada. 
+              </em>
               </p>
 
               
@@ -113,7 +116,7 @@
                             </div>
                             <div class="card-body">
                                 <p class="card-text">
-                                    Informacion Personal
+                                    Información Personal
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
@@ -132,7 +135,7 @@
                             </div>
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Informacion Academica
+                                        Información Academica
                                     </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
@@ -162,7 +165,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            
                         </div>
                     </div>
                 </div>
