--- a/academica.html
+++ b/academica.html
@@ -16,15 +16,16 @@
     <!-- iconos redes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Información Academica</title>
+
     <link rel="stylesheet" href="cssacademic.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   
 </head>
-  <body>
+  <body style="background-image: url('img/princfondo.JPG'); background-size: cover; background-position: center center; width: 100%; height: 100%;">
         <!-- Encabezado -->
       <header>
-        <nav class="navbar bg-body-tertiary fixed-top">
+        <nav class="navbar bg-body-tertiary fixed-top" >
             <div class="container-fluid">
                 <span class="badge bg-secondary">INFORMACIÓN ACADÉMICA</span>
                 <a class="navbar-brand">Jorge Andrés Vargas Pérez</a>
@@ -47,6 +48,8 @@
                         <div class="card-body">
                           <h4 class="card-title">Estudiante de Ingenieria Topográfica</h4>
                           <p class="card-text">Universidad del Valle</p>
+                          <p><em>jorge.andres.vargas@correounivalle.edu.co</em></p>
+                          <p><em>3184630715</em></p>
                           <a href="https://www.facebook.com/J.andres.vargas.perez" target="_blank" class="text-white mr-3"><i class="fab fa-facebook fs-2"></i></a>
                           <a href="https://twitter.com/___jorge_andres" target="_blank" class="text-white mr-3"><i class="fab fa-twitter fs-2"></i></a>
                           <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-2"></i></a>
@@ -67,6 +70,7 @@
                             <li><a class="dropdown-item" href="personal.html">Informacion personal</a></li>
                             <li><a class="dropdown-item" href="academica.html">Informacion Academica</a></li>
                             <li><a class="dropdown-item" href="expectativas.html">Expectativas</a></li>
+                            <li><a class="dropdown-item" href="galeria.html">Galería</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -83,7 +87,7 @@
         <br>
         <br>
         <!-- Acá va la parte inicial -->
-        <section class="jumbotron text-center">
+        <section class="jumbotron text-center ">
             <div class="container rounded" style="background-image: url('img/fondacademia.JPG'); background-size: cover;">
               <br>
               <img class="mx-auto d-block img-thumbnail" src="img/indexperfil2.JPG" width="300" height="300" >
@@ -92,8 +96,8 @@
               <br>
             </div>
         </section>
-        <div class="container">
-          <div class="text-center font-italic">
+        <div class="container text-dark lead">
+          <div class="text-center font-italic rounded text-white" style="background-color: black; opacity: 0.5">
             <hr class="featurette-divider">
             <h2 class="text-center">Información Academica</h2>
             <p class="lead fw-light"> A continuación se presenta un resumen de las instituciones educativas en las cuales he realizado mi formación académica de las cuales se habló en <a href="personal.html">Información personal</a> y los periodos temporales en los cuales los he realizado, iniciando desde la primaria hasta este momento. </p>
@@ -152,20 +156,22 @@
                 </div>
                   <!-- Columna 4 -->
             </div>
-            <div class="text-center font-italic">
+            <div class="text-center font-italic rounded text-white" style="text-align: justify; ">
               <hr class="featurette-divider">
-              <h2 class="text-center">Formación academica actual.</h2>
+              <h2 class="text-center text-white">Formación academica actual</h2>
               <a href="https://www.univalle.edu.co/" target="u_blank">
                 <img class="img-thumbnail" src="img/logo.png" width="250" height="250">
               </a>
-              <p class="lead fw-light" style="text-align: justify;"> Al terminar mi formación de tecnología en topografía en el año 2016 continué ejerciendo el tecnólogo durante más de un año. Personalmente soy una persona que intenta mejorar personal y académicamente además, considerando la prospección que tenía la topografía en diferentes industrias investigué carreras afines al dicha tecnología encontré la Ingeniería topográfica que cumplia con mis expectativas académicas para ese momento, en esta búsqueda encontré la <a href="https://www.univalle.edu.co/">Universidad del Valle</a> que me llamó la atención por el pensum, intenté ingresar al programa aproximadamente 3 veces y a la cuarta vez logré ingresar afortunadamente en el segundo semestre del año 2018 (2018-II), fue un poco difícil al inicio considerando la distancia a la cual me encontraba pero finalmente fue algo bueno para mí por la formación académica a la cual tenía la oportunidad de acceder y el cambio cultural fue agradable.</p>
-              <p class="lead fw-light" style="text-align: justify;"> Actualmente me encuentro en 9no semestre de Ingeniería topográfica en la Universidad del Valle agradecido de los conocimientos que he adquirido, con un panorama mucho más amplio de cuando comencé la carrera al aplicar nuevas tecnologías que no consideré antes. </p>
+              <br>
+              <br>
+              <p class="lead  order-md-1 rounded text-white" style="text-align: justify; background-color: black; opacity: 0.5;"> Al terminar mi formación de tecnología en topografía en el año 2016 continué ejerciendo el tecnólogo durante más de un año. Personalmente soy una persona que intenta mejorar personal y académicamente además, considerando la prospección que tenía la topografía en diferentes industrias investigué carreras afines al dicha tecnología encontré la Ingeniería topográfica que cumplia con mis expectativas académicas para ese momento, en esta búsqueda encontré la <a href="https://www.univalle.edu.co/">Universidad del Valle</a> que me llamó la atención por el pensum, intenté ingresar al programa aproximadamente 3 veces y a la cuarta vez logré ingresar afortunadamente en el segundo semestre del año 2018 (2018-II), fue un poco difícil al inicio considerando la distancia a la cual me encontraba pero finalmente fue algo bueno para mí por la formación académica a la cual tenía la oportunidad de acceder y el cambio cultural fue agradable.</p>
+              <p class="lead fw-light rounded text-white" style="text-align: justify; background-color: black; opacity: 0.5"> Actualmente me encuentro en 9no semestre de Ingeniería topográfica en la Universidad del Valle agradecido de los conocimientos que he adquirido, con un panorama mucho más amplio de cuando comencé la carrera al aplicar nuevas tecnologías que no consideré antes. </p>
             </div>
             <hr class="featurette-divider">
         </div>
         <div class="container">
-          <h2 class="text-center">Experiencia adquirida</h2>
-          <p class="lead" style="text-align: justify;">
+          <h2 class="text-center text-dark">Experiencia adquirida</h2>
+          <p class="lead rounded text-white" style="text-align: justify; background-color: black; opacity: 0.5;">
             A continuación, se relacionan los datos e información de experiencia laboral y aplicación de conocimientos en proyectos académicos y laborales en los cuales he participado.
           </p>
           <br>
@@ -173,7 +179,7 @@
         </div>
           <!-- Cuadro 1 imagen izquierda -->
           <div class="row featurette">
-            <div class="col-md-7 order-md-2">
+            <div class="col-md-7 order-md-2 rounded text-white" style="background-color: black; opacity: 0.5">
               <h2 class="featurette-heading">
                 Experiencia 
                 <span class="text-muted"> laboral tecnólogo</span>
@@ -194,7 +200,7 @@
             <div class="col-md-5 order-md-2">
               <img class="img-thumbnail" src="img/proy.jpg">
             </div>
-            <div class="col-md-7 order-md-1">
+            <div class="col-md-7 order-md-1 rounded text-white" style="background-color: black; opacity: 0.5">
               <h2 class="featurette-heading">
                 Proyectos
                 <span class="text-muted"> Universidad </span>
@@ -211,8 +217,8 @@
             <hr class="featurette-divider">
           <br>
           <!-- Cuadro 3 imagen izquierda -->
-          <div class="row featurette">
-            <div class="col-md-7 order-md-2">
+          <div class="row featurette rounded" >
+            <div class="col-md-7 order-md-2 rounded text-white" style="background-color: black; opacity: 0.5">
               <h2 class="featurette-heading">
                 Otros
                 <span class="text-muted" > proyectos</span>
@@ -231,7 +237,7 @@
             <hr class="featurette-divider">
           <br>
                   <!-- Acá va el carousel que es donde cambian las imagenes-->
-        <div class="container">
+        <div class="container text-muted">
           <h2 style="text-align: center;">Imagenes</h2>
           <br>
 
