--- a/personal.html
+++ b/personal.html
@@ -58,6 +58,8 @@
                       <div class="card-body">
                         <h4 class="card-title">Estudiante de Ingenieria Topográfica</h4>
                         <p class="card-text">Universidad del Valle</p>
+                        <p><em>jorge.andres.vargas@correounivalle.edu.co</em></p>
+                        <p><em>3184630715</em></p>
                         <a href="https://www.facebook.com/J.andres.vargas.perez" target="_blank" class="text-white mr-3"><i class="fab fa-facebook fs-2"></i></a>
                         <a href="https://twitter.com/___jorge_andres" target="_blank" class="text-white mr-3"><i class="fab fa-twitter fs-2"></i></a>
                         <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-2"></i></a>
@@ -78,6 +80,7 @@
                           <li><a class="dropdown-item" href="personal.html">Informacion personal</a></li>
                           <li><a class="dropdown-item" href="academica.html">Informacion Academica</a></li>
                           <li><a class="dropdown-item" href="expectativas.html">Expectativas</a></li>
+                          <li><a class="dropdown-item" href="galeria.html">Galería</a></li>
                       </ul>
                   </li>
                   <li class="nav-item">
@@ -318,6 +321,13 @@
           <br>
           <hr class="featurette-divider">
           <br>
+          
+
+         
+
+
+
+
             <h2>Imagenes</h2>
             <p class="lead" >A continuación se presentan algunas imagenes referentes a mi vida personal.</p> 
             <div  id="myCarousel" class="carousel slide" data-bs-ride="carousel">
