--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark">
+<html>
+<head>
   <head>
     <meta charset="UTF-8">
     <!-- Descripcion de la pagina -->
@@ -17,32 +18,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Pagina principal</title>
     <!-- Fondo -->
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="cssindex.css">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </head>
   
+<title>Card Effect</title>
 </head>
   <body class="text-center">
-    
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
-        <div class="inner">
-            <h3 class="masthead-brand">Taller 1 SIG WEB</h3>
-        </div>
-      </header>
-      <hr class="featurette-divider">
+    <header class="masthead mb-auto">
+
+    </header>
+    <div class="card">
       <main role="main" class="inner cover">
-        <h1 class="cover-heading"> Jorge Andrés Vargas Pérez </h1>
         <div class="container">
-            <img class="mx-auto d-block rounded-circle" src="img/indexperfil2.JPG" width="300" height="300" >
+            <img class="mx-auto d-block rounded-circle" src="img/indexperfil2.JPG" width="200" height="200" >   
         </div>
+        <h3 class="cover-heading"> Jorge Andrés Vargas Pérez </h3>
         <p class="lead">
-            En este sitio WEB usted va a encontrar informacion autobiografica
+          En este sitio WEB usted va a encontrar información autobiografica
         </p>
-        <p class="lead">
-            <a href="principal.html" class="btn btn-lg btn-success"> Ingresar</a>
-        </p>
+
       </main>
-      <!-- footer -->
+    </div>
+    <p class="lead">
+      <a href="principal.html" class="btn btn-lg btn-success"> Ingresar</a>
+    </p>
+    <!-- footer -->
     <footer class="mastfoot mt-auto text-white text-center">
         <div class="inner">
             <h6>Sígueme en redes sociales:</h6>
@@ -51,6 +54,6 @@
             <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-3"></i></a>
           </div>
     </footer>  
-    </div>
-    </body>
+  </body>
 </html>
+
