--- a/personal.html
+++ b/personal.html
@@ -28,11 +28,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
     <script src="js.js"></script>
-
-
-
-    <!--<script src="js.js"></script>-->
-
   </head>
   <body>
     <!-- Encabezado -->
@@ -238,7 +233,14 @@
               <br>
               <!-- Acordion -->
               <div class="row" style="border: 2px solid rgb(100, 97, 97);">
-                <h2>Hobbies y pasatiempos</h2>
+                <h2>Gustos, hobbies y pasatiempos</h2>
+                <p class="lead" style="text-align: justify">Personalmente,disfruto mucho de escuchar musica, en general no tengo preferencia por un genero musical en especifico, ya que la musica que escucho, depende de la situacion y el contexto en el que me encuentre. A continuación se encuentra una de las canciones que más me gustan.</p> 
+                <audio controls>
+                  <source src="img/Interpol.mp3" type="audio/mpeg">
+                  Mi canción favorita
+                </audio>
+                <p class="lead" style="text-align: justify">Me gustan los animales, mis favoritos son los gatos, a lo largo de mi vida he tenido aproximadamente 5 gatos, actualmente tengo una pero por circunstancias de la universidad no está conmigo, al final de la pagina o en la <a href="galeria.html"> galería </a> se presentan algunas fotografias de mi gata la cual se llama Pancha.</p> 
+
                 <p class="lead" style="text-align: justify"> A lo largo de los años he tenido diferentes hobbies y pasatiempos, entre los cuales algunos aún conservo como lo son escuchar música, actividades recreativas o hacer entrenamiento anaeróbico, A continuación, se presentan mis hobbies y pasatiempos principales a los cuales les dedico una mayor cantidad de tiempo:</p> 
               <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
@@ -304,7 +306,7 @@
                             Videojuegos
                           </h2>
                           <p class="lead" style="text-align: justify">
-                            Los videojuegos son un pasatiempo que disfruto ya que me permite de cierta manera compartir con personas que se encuentran lejos gracias a los juegos en línea. 
+                            Los videojuegos son un pasatiempo que disfruto ya que me permite de cierta manera compartir con personas que se encuentran lejos gracias a los juegos en línea, generalmente juego con personas que conocí en el colegio desde el año 2010 con los cuales hasta hace un tiempo no tenia mucho contacto y los video juegos han ayudado de cierta manera a fortalecer dicha amistad. 
                           </p>
                         </div>
                         <div class="col-md-5 order-md-1">
