--- a/principal.html
+++ b/principal.html
@@ -99,7 +99,7 @@
               </div>
           </div>
       </div>
-      <div class="card" style="	background-image: url('img/caracademias.JPG'); background-size: cover;">
+      <div class="card" style="	background-image: url('img/f1.JPG'); background-size: cover;">
           <div class="face face1">
               <div class="content rounded" style="text-align: justify;">
                   <img class="img-fluid mx-auto d-block rounded" src="img/princacademic.JPG" >
@@ -116,7 +116,7 @@
               </div>
           </div>
       </div>
-      <div class="card" style="	background-image: url('img/caracademias.JPG'); background-size: cover;">
+      <div class="card" style="	background-image: url('img/expect2.JPG'); background-size: cover;">
           <div class="face face1">
               <div class="content" style="text-align: justify;">
                   <img src="img/drone.JPG">
