--- a/galeria.html
+++ b/galeria.html
@@ -85,8 +85,12 @@
             </div>
           </nav>
       </header>
-      <h1 class="title" style="background-color: black; opacity:0.7;">Galería fotografica</h1>
-      <div class="slider" x-data="{start: true, end: false}">
+      <div>
+        <h1 class="title" style="background-color: black; opacity:0.7;">Galería fotografica</h1>
+        <p class="title text-dark"> Deslice la barra inferior para ver más fotografías </p>
+      </div>
+      
+      <div class="slider title" x-data="{start: true, end: false}">
         <div class="slider__content" x-ref="slider" x-on:scroll.debounce="$refs.slider.scrollLeft == 0 ? start = true : start = false; Math.abs(($refs.slider.scrollWidth - $refs.slider.offsetWidth) - $refs.slider.scrollLeft) < 5 ? end = true : end = false;">
           <div class="slider__item">
             <img class="slider__image" src="img/galeria1.JPG" alt="Image">
@@ -134,7 +138,7 @@
         <div>
           <h1 class="text-dark" style="text-align: center;">Pagina favorita
         </h1>
-        <p class="lead text-white" style="background-color: black; opacity: 0.7;text-align: justify;">La pagina que más me gusta en este momento corresponde a <a href="https://jkanime.net/">JKanime</a></p>
+        <p class="lead text-white" style="background-color: black; opacity: 0.7;text-align: justify;">La página que más me gusta en este momento corresponde a <a href="https://jkanime.net/">JKanime</a> ya que desde hace tiempo disfruto de ver anime y esta es la página que utilizo para ello. Disfruto bastante de la historia que tienen algunos animes y además disfruto de las animaciones de algunos de ellos ya que pueden transmitir de mejor manera la historia que quieren contar y hacen además que me interese seguir la historia para conocer el desenlace</p>
         <div>
         </div>
         <iframe class="rounded" src="https://jkanime.net/" width="1100" height="700"></iframe>
