--- a/principal.html
+++ b/principal.html
@@ -87,7 +87,7 @@
       <div class="card" style="	background-image: url('img/fproncipal.JPG'); background-size: cover;">
           <div class="face face1">
               <div class="content rounded">
-                  <img class="img-fluid mx-auto d-block rounded" src="img/perfil2.JPG" style="width:100%">
+                  <img class="img-fluid mx-auto d-block rounded" src="img/perfil2.jpg" style="width:100%">
                   <h3>Personal</h3>
               </div>
           </div>
