--- a/galeria.html
+++ b/galeria.html
@@ -136,7 +136,7 @@
       </div>
       <div class="container rounded">
         <div>
-          <h1 class="text-dark" style="text-align: center;">Pagina favorita
+          <h1 class="text-dark" style="text-align: center;">Página favorita
         </h1>
         <p class="lead text-white" style="background-color: black; opacity: 0.7;text-align: justify;">La página que más me gusta en este momento corresponde a <a href="https://jkanime.net/">JKanime</a> ya que desde hace tiempo disfruto de ver anime y esta es la página que utilizo para ello. Disfruto bastante de la historia que tienen algunos animes y además disfruto de las animaciones de algunos de ellos ya que pueden transmitir de mejor manera la historia que quieren contar y hacen además que me interese seguir la historia para conocer el desenlace</p>
         <div>
