--- a/expectativas.html
+++ b/expectativas.html
@@ -108,8 +108,8 @@
                     </div>
                     <div class="col-md-8 order-md-1 mx-auto px-0">
                       <h3 class="display-5 font-italic text-dark">
-                        <strong>Presentación</strong> 
-                        <span class="text-dark"><strong>inicial</strong></span>
+                        <strong>Expectativas</strong> 
+                        <span class="text-dark"><strong></strong></span>
                       </h3>
                       <p class="lead text-dark" style="text-align: justify; text-shadow:1px 1px 2px rgba(0,0,0,0.5);">
                         <strong><em>Las expectativas y proyecciones de una persona están intrínsecamente ligadas a sus metas y objetivos a largo plazo. Estas pueden variar en función de la edad, la educación, la experiencia laboral, la situación económica y otros factores que influyen en la vida de cada individuo. Algunas personas pueden tener expectativas relacionadas con su carrera profesional, buscando ascender en su trabajo actual o cambiarse a una posición con mayores responsabilidades y remuneración. Otros pueden tener expectativas personales, como viajar a diferentes países, aprender nuevos idiomas, adquirir una propiedad o crear una empresa. En cuanto a las proyecciones, estas pueden estar enfocadas en cómo enfrentar retos futuros, como una posible recesión económica o cambios en el mercado laboral. En definitiva, tener claras las expectativas y proyecciones es importante para fijar objetivos realistas y trazar un plan de acción efectivo que permita alcanzarlos.</em>
