--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- iconos redes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <title>Pagina principal</title>
+    <title>Ingresar</title>
     <!-- Fondo -->
 
     <link rel="stylesheet" href="cssindex.css">
