--- a/academica.html
+++ b/academica.html
@@ -91,7 +91,7 @@
             <div class="container rounded" style="background-image: url('img/fondacademia.JPG'); background-size: cover;">
               <br>
               <img class="mx-auto d-block img-thumbnail" src="img/indexperfil2.JPG" width="300" height="300" >
-              <h2>Información Academica</h2>
+              <h2>Información Académica</h2>
               <p class="lead" style="text-align: justify;"> <em>La información académica corresponde a estudios y conocimientos relevantes que he adquirido. La información académica también puede incluir. Sabiendo que la información académica es crucial para el desarrollo y avance del conocimiento, la educación en el ámbito académico ayuda además al posterior desarrollo personal y laboral al aumentar la proyección que se tiene de sí mismo. </em></p>
               <br>
             </div>
